[gd_scene load_steps=10 format=3 uid="uid://cmh6vieeaqh18"]

[ext_resource type="Script" path="res://game/hotspots/hotspot.gd" id="1_mitsg"]
[ext_resource type="Texture2D" uid="uid://c7srbl3xuvjji" path="res://assets/ui/circle_42_weiss.png" id="3_3cjad"]
[ext_resource type="Script" path="res://game/logic/interaction/interaction_area.gd" id="3_a5e8m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ecs4s"]
size = Vector2(23, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vuycb"]
size = Vector2(49, 40)

[sub_resource type="Animation" id="Animation_hxyjo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("icon:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("icon:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_segwi"]
resource_name = "blink"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("icon:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(2, 1, 2),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.435294, 0.372549, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("icon:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 0, 1, 2]
}

[sub_resource type="Animation" id="Animation_gm601"]
resource_name = "mark"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5kps1"]
_data = {
"RESET": SubResource("Animation_hxyjo"),
"alarm": SubResource("Animation_segwi"),
"mark": SubResource("Animation_gm601")
}

[node name="Hotspot" type="StaticBody2D" groups=["minimap_objects"]]
z_index = 1
y_sort_enabled = true
collision_layer = 16
script = ExtResource("1_mitsg")
points = 0
damage_after = 2

[node name="icon" type="Sprite2D" parent="."]
z_index = 1
y_sort_enabled = true
offset = Vector2(0, -39)
hframes = 3

[node name="spriteCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, -10)
shape = SubResource("RectangleShape2D_ecs4s")

[node name="InteractionArea" type="Area2D" parent="." node_paths=PackedStringArray("markerShape")]
position = Vector2(0, -40)
script = ExtResource("3_a5e8m")
action_name = "reset "
markerShape = NodePath("collisionMarker")

[node name="IA_Collision" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2(0, 30)
shape = SubResource("RectangleShape2D_vuycb")
debug_color = Color(0.215686, 0.639216, 0, 0.419608)

[node name="collisionMarker" type="Sprite2D" parent="InteractionArea"]
visible = false
modulate = Color(0.742188, 0.281672, 0.101471, 1)
position = Vector2(0, 30.5)
scale = Vector2(1.45238, 1.45238)
texture = ExtResource("3_3cjad")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5kps1")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="damageCountdown" type="Timer" parent="."]

[node name="Alarm" type="Node2D" parent="."]

[node name="alarmSoundPlayer" type="AudioStreamPlayer2D" parent="Alarm"]
bus = &"sfx"

[node name="alarmIntervalTimer" type="Timer" parent="Alarm"]
wait_time = 2.5

[connection signal="body_entered" from="InteractionArea" to="InteractionArea" method="_on_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="InteractionArea" method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="damageCountdown" to="." method="_on_pointer_countdown"]
[connection signal="timeout" from="Alarm/alarmIntervalTimer" to="." method="_on_alarm_interval_timer_timeout"]
